[package]
name = "folder_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
relative-path = "1.9"
md-5 = "0.10"

[profile.release]
strip = "symbols"
